test/conformance/chainsaw/generate/policy/standard/data/nosync/pol-data-nosync-delete-policy/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: pol-data-nosync-delete-policy-policy
  namespace: manta
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
