test/conformance/chainsaw/generate/policy/standard/data/nosync/pol-data-nosync-delete-policy/policy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: manta
---
apiVersion: kyverno.io/v1
kind: Policy
metadata:
  name: pol-data-nosync-delete-policy-policy
  namespace: manta
spec:
  rules:
  - name: pol-data-nosync-delete-policy-rule
    match:
      any:
      - resources:
          kinds:
          - Secret
    generate:
      synchronize: false
      apiVersion: v1
      kind: ConfigMap
      name: zk-kafka-address
      namespace: manta
      data:
        kind: ConfigMap
        metadata:
          labels:
            somekey: somevalue
        data:
          ZK_ADDRESS: "192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181"
          KAFKA_ADDRESS: "192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092"
