test/conformance/chainsaw/generate/policy/standard/data/nosync/pol-data-nosync-delete-policy/chainsaw-step-05-assert-1-1.yaml
apiVersion: v1
data:
  KAFKA_ADDRESS: 192.168.10.13:9092,192.168.10.14:9092,192.168.10.15:9092
  ZK_ADDRESS: 192.168.10.10:2181,192.168.10.11:2181,192.168.10.12:2181
kind: ConfigMap
metadata:
  name: zk-kafka-address
  namespace: manta
