test/conformance/chainsaw/generate/policy/standard/data/nosync/pol-data-nosync-delete-policy/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: pol-data-nosync-delete-policy
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../../_step-templates/policy-ready.yaml
      with:
        bindings:
        - name: name
          value: pol-data-nosync-delete-policy-policy
        - name: namespace
          value: manta
  - name: step-02
    try:
    - apply:
        file: secret.yaml
    - assert:
        file: generated-configmap.yaml
  - name: step-03
    try:
    - delete:
        ref:
          apiVersion: kyverno.io/v1
          kind: Policy
          name: pol-data-nosync-delete-policy-policy
          namespace: manta
  - name: step-04
    try:
    - sleep:
        duration: 3s
  - name: step-05
    try:
    - assert:
        file: chainsaw-step-05-assert-1-1.yaml
